Bug 472113 - When stacking images, the menu is not immediately updated
Summary: When stacking images, the menu is not immediately updated
Status: RESOLVED FIXED
Alias: None
Product: kphotoalbum
Classification: Applications
Component: general (other bugs)
Version First Reported In: unspecified
Platform: Other Linux
: NOR normal
Target Milestone: ---
Assignee: KPhotoAlbum Bugs
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2023-07-09 22:37 UTC by Johannes Zarl-Zierl
Modified: 2023-07-09 22:39 UTC (History)
0 users

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Johannes Zarl-Zierl 2023-07-09 22:37:15 UTC
SUMMARY

STEPS TO REPRODUCE
1. Run kphotoalbum --demo
2. Click "Show Thumbnails"
3. Select two imaged and press Ctrl-3 to stack them together
4. Go to the "View" menu

OBSERVED RESULT
Both "Collapse all stacks" and "Expand all stacks" are disabled.

EXPECTED RESULT
"Expand all stacks" should be enabled.

SOFTWARE/OS VERSIONS
Windows: 
macOS: 
Linux/KDE Plasma: 
(available in About System)
KDE Plasma Version: 
KDE Frameworks Version: 
Qt Version: 

ADDITIONAL INFORMATION
Comment 1 Johannes Zarl-Zierl 2023-07-09 22:39:04 UTC
Git commit aa363b64389e3dadea293a681770f9fb70c01379 by Johannes Zarl-Zierl.
Committed on 09/07/2023 at 22:32.
Pushed by johanneszarl into branch 'master'.

Make sure stack data is always up-to date

M  +12   -11   ThumbnailView/ThumbnailModel.cpp

https://invent.kde.org/graphics/kphotoalbum/-/commit/aa363b64389e3dadea293a681770f9fb70c01379