Make sure stack data is always up-to date

BUG: 472113